--- a/index.html
+++ b/index.html
@@ -31,20 +31,26 @@
         <hr>
         <div>
             <div class="container-item">
-                <img src="assets/images/Rajita.jpeg" alt="MyPicture" width="280" height="320">
+
+                <img id="myPic" src="assets/images/Rajita.jpeg" alt="MyPicture">
             </div>
             <div class="container-item para">
-                <p> Hi, I'm Rajita! I am learning web development simply because I loved it. I loved the thrill. I love
+                <p>Hi, I'm Rajita! I am learning web development simply because I loved it. I loved the thrill. I love
                     to
-                    see my imagination come to life.</p>
-                <p> I choose to be a web developer to bring my ideas to life and help others see what I think a better
-                    world looks like.</p>
-                <p> World wide web is everywhere and everyone is on World wide web. If www didn't existed, We won't be
+                    see my imagination come to life.
+                <br>
+                <br>
+                I choose to be a web developer to bring my ideas to life and help others see what I think a better
+                    world looks like.
+                <br>
+                <br>
+                World wide web is everywhere and everyone is on World wide web. If www didn't existed, We won't be
                     able
                     to google the question that we have and we didn't had an opportunity to express the opinion of the
                     question and as a web developer you have the ability to involve in this movement and be the
                     frontier of
-                    the revolution.</p>
+                    the revolution.
+                </p>
             </div>
         </div>
     </section>
